# capsule

./: .coveralls.yml  Cargo.toml  README.md  docker-compose.yml  sonar-project.properties
capsule-core/: Cargo.toml  diesel.toml
capsule-core/_fixture/git_hooks/: TEST_HOOKS
capsule-core/migrations/00000000000000_diesel_initial_setup/: up.sql
capsule-core/migrations/2022-03-13-141511_create_users/: up.sql
capsule-core/migrations/postgres/2022-03-13-141511_create_users/: up.sql
capsule-core/migrations/postgres/2022-03-18-131157_create_pwd_credential/: down.sql  up.sql
capsule-core/migrations/postgres/2022-03-31-152629_create_applications/: up.sql
capsule-core/src/: lib.rs
capsule-core/src/application/: application_factory.rs  applications.rs  dns.rs  domain_name.rs  git.rs  mod.rs
capsule-core/src/application/implementation/: domain_name_service.rs  git_service.rs  mod.rs
capsule-core/src/application/implementation/postgres/: mod.rs  models.rs  postgres_applications.rs  postgres_repository.rs  schema.rs
capsule-core/src/application/repository/: mod.rs
capsule-core/src/git/: mod.rs
capsule-core/src/settings/: mod.rs
capsule-core/src/user/: mod.rs
capsule-core/src/user/credential/: mod.rs  pwd_credential.rs
capsule-core/src/user/credentials/: mod.rs
capsule-core/src/user/implementation/: mod.rs
capsule-core/src/user/implementation/postgres/: mod.rs  models.rs  schema.rs  (+2 more)
capsule-core/src/user/repository/: mod.rs
capsule-core/tests/: application_test.rs  user_test.rs
capsule-server/: Cargo.toml  Dockerfile
capsule-server/_fixture/: capsule-server-test.toml  capsule-server.toml  default.toml  local.toml
capsule-server/migrations/postgres/2022-03-13-141511_create_users/: down.sql  up.sql
capsule-server/migrations/postgres/2022-03-18-131157_create_pwd_credential/: down.sql
capsule-server/migrations/postgres/2022-03-31-152629_create_applications/: down.sql  up.sql
capsule-server/src/: main.rs  settings.rs
capsule-server/src/context/: mod.rs
capsule-server/src/implementation/: dns_service.rs  domain_name_service.rs  git_repo.rs  git_service.rs  mod.rs
capsule-server/src/resources/: application.rs  mod.rs
capsule-server/src/settings/: mod.rs
(+55 files in other folders)
