#Copyright 2022 the original author or authors.
#
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.
[package]
name = "capsule-core"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tempdir = "0.3.7"

[dependencies]
downcast-rs = "1.2.0"
diesel = { version = "1.4.0", features = ["postgres", "chrono"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-crypto = "0.2.36"
rand = "0.8.5"
git2 = "0.14.2"
anarchist-readable-name-generator-lib = "0.1.1"

[dev-dependencies.test-tool]
version = "0.1.0"
path = "../test-tool"
features = ["pg"]