#Copyright 2022 the original author or authors.
#
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.

[package]
name = "capsule-server"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tempdir = "0.3.7"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.14.2"
lazy_static = "1.4.0"
config = "0.13"

[dependencies.capsule-core]
version = "0.1.0"
path = "../capsule-core"

[dev-dependencies.test-tool]
version = "0.1.0"
path = "../test-tool"
features = ["pg"]